--- a/scss/shared/wrap.scss
+++ b/scss/shared/wrap.scss
@@ -5,7 +5,7 @@
 	margin-left: auto;
 	margin-right: auto;
   padding: 0;
-  z-index: 2;
+  //z-index: 2;
   &:not(.nav__container) {
     position: relative;
   }
